--- a/configs/stargan.yaml
+++ b/configs/stargan.yaml
@@ -8,17 +8,11 @@ Path:
 
   resume_state: #results/stargan/resume/epoch_12.state
   resume_model_dir: results/stargan/resume
-  log_file_path: results/stargan
   save_img: results/stargan/res_img
   checkpoint_dir: results/stargan/ckp
 
   pretrain_model_dir: results/pretrain/stargan
   pretrain_res: results/stargan/res_pretrain_img
-
-Transforms:
-  flip: True
-  rot: True
-  resize: 256
 
 Model_Param:
   dataset_name: celeba_hq
@@ -27,7 +21,7 @@ Model_Param:
   output_nc: 3
   ngf: 64
   ndf: 64
-  img_size: 256 # should be same with 'Transforms'-'resize'
+  img_size: 256
   init_type: normal # network initialize type
   init_gain: 0.02 # std
   c_dim: 1 # gender only
